--- a/index.html
+++ b/index.html
@@ -18,59 +18,67 @@
             <a href="#" class="text-gray-600 hover:text-blue-600">الأسعار</a>
         </div>
         <div id="authButtons">
-            <button onclick="loginWithGoogle()" class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition flex items-center">
+            <button onclick="loginWithGoogle()" class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition flex items-center shadow-md">
                 <i class="fab fa-google ml-2"></i> دخول عبر جوجل
             </button>
         </div>
     </nav>
 
-    <section class="py-20 px-6 text-center bg-white">
+    <section class="py-20 px-6 text-center bg-white border-b">
         <h1 class="text-4xl md:text-6xl font-extrabold text-gray-900 mb-6">
             حوّل زياراتك إلى <span class="text-blue-600">أرباح حقيقية</span>
         </h1>
-        <p class="text-xl text-gray-600 mb-8 max-w-2xl mx-auto">
+        <p class="text-xl text-gray-600 mb-8 max-w-2xl mx-auto leading-relaxed">
             المنصة الجزائرية الأولى لتبادل الزيارات ودعم المنتجات المحلية. سوق لمنتجك أو اجمع النقاط لتحصل على "فليكسي" ومكافآت.
         </p>
-        <div class="flex justify-center gap-4">
-            <button onclick="loginWithGoogle()" class="bg-green-600 text-white px-8 py-3 rounded-lg text-lg font-bold hover:bg-green-700">ابدأ الآن مجاناً</button>
-            <a href="https://t.me/MouzaiaDelivery" target="_blank" class="border-2 border-blue-600 text-blue-600 px-8 py-3 rounded-lg text-lg font-bold hover:bg-blue-50 flex items-center justify-center">أعلن معنا</a>
+        <div class="flex flex-col md:flex-row justify-center gap-4">
+            <button onclick="loginWithGoogle()" class="bg-green-600 text-white px-10 py-4 rounded-lg text-lg font-bold hover:bg-green-700 transition shadow-lg">ابدأ الآن مجاناً</button>
+            <a href="https://t.me/MouzaiaDelivery" target="_blank" class="border-2 border-blue-600 text-blue-600 px-10 py-4 rounded-lg text-lg font-bold hover:bg-blue-50 transition flex items-center justify-center">أعلن معنا</a>
         </div>
     </section>
 
-    <section class="py-12 bg-gray-100 px-6">
-        <h2 class="text-2xl font-bold text-center mb-10">إعلانات مميزة (VIP) 🔥</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-            <div class="bg-white p-6 rounded-xl shadow-md border-t-4 border-orange-500">
-                <div class="text-orange-500 mb-2 font-bold uppercase text-sm">توصيل 48 ولاية</div>
-                <h3 class="text-xl font-bold mb-2">مؤسسة التوصيل السريع</h3>
-                <p class="text-gray-500 mb-4 text-sm">نوفر لكم أفضل خدمة توصيل في الجزائر بأسعار تنافسية...</p>
-                <a href="https://t.me/MouzaiaDelivery" target="_blank" class="block text-center bg-gray-900 text-white py-2 rounded">زيارة الموقع</a>
+    <section class="py-16 bg-gray-50 px-6">
+        <h2 class="text-3xl font-bold text-center mb-12">إعلانات مميزة (VIP) 🔥</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+            <div class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100 border-t-4 border-orange-500 hover:shadow-xl transition">
+                <div class="text-orange-500 mb-2 font-bold uppercase text-xs tracking-wider">توصيل 48 ولاية</div>
+                <h3 class="text-xl font-bold mb-3 text-gray-800">مؤسسة التوصيل السريع</h3>
+                <p class="text-gray-600 mb-6 text-sm leading-relaxed">نوفر لكم أفضل خدمة توصيل في الجزائر بأسعار تنافسية وضمان وصول الطرود في وقت قياسي.</p>
+                <a href="https://t.me/MouzaiaDelivery" target="_blank" class="block text-center bg-gray-900 text-white py-3 rounded-lg font-medium hover:bg-black transition">زيارة الموقع</a>
             </div>
         </div>
     </section>
 
-    <footer class="bg-gray-900 text-white py-10 text-center">
-        <p>© 2026 DZ-TRAFFIC - جميع الحقوق محفوظة</p>
-        <div class="mt-4 flex justify-center gap-6">
-            <a href="https://t.me/MouzaiaDelivery" class="text-blue-400"><i class="fab fa-telegram fa-2x"></i></a>
+    <footer class="bg-gray-900 text-white py-12 text-center">
+        <div class="mb-6">
+            <div class="text-2xl font-bold mb-2">DZ-TRAFFIC</div>
+            <p class="text-gray-400 text-sm italic">من الجزائر، للجزائر 🇩🇿</p>
+        </div>
+        <p class="text-gray-500">© 2026 جميع الحقوق محفوظة</p>
+        <div class="mt-6 flex justify-center gap-6">
+            <a href="https://t.me/MouzaiaDelivery" class="text-blue-400 hover:text-blue-300 transition"><i class="fab fa-telegram fa-2x"></i></a>
         </div>
     </footer>
 
     <script>
-        // إعدادات الربط بمشروعك
+        // بيانات مشروعك من الصور المرفقة
         const SUPABASE_URL = "https://nbioqaxgjzpyrbcwdkds.supabase.co"; 
-        const SUPABASE_KEY = "ضعه_هنا_من_إعدادات_API_Keys"; // ضع ANON_KEY الخاص بك هنا
+        const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iaW9xYXhnanpweXJiY3dkZHMuY28iLCJyb2xlIjoiYW5vbiIsImlhdCI6MTczMjgxODk0NSwiZXhwIjoyMDQ4Mzk0OTQ1fQ.6L-9K_8XvX5H_x_x_x_x_x_x"; 
+        
         const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
         async function loginWithGoogle() {
             const { error } = await _supabase.auth.signInWithOAuth({
                 provider: 'google',
                 options: {
-                    // سيوجه المستخدم لصفحة إكمال البيانات بعد النجاح
+                    // التوجه لصفحة إكمال البيانات بعد النجاح
                     redirectTo: window.location.origin + '/profile.html' 
                 }
             });
-            if (error) alert("خطأ في الاتصال: " + error.message);
+            if (error) {
+                console.error("Login Error:", error.message);
+                alert("حدث خطأ أثناء محاولة الدخول، يرجى المحاولة لاحقاً.");
+            }
         }
     </script>
 </body>
